[package]
edition = "2021"
name = "blinky-rtic"
version = "0.1.0"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
rtic = { version = "2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2", features = ["rp2040"] }
rp2040-hal = { version = "0.10", features = ["rt"] }
rp2040-boot2 = "0.3"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1.0"
portable-atomic = { version = "1", features = ["critical-section"] }
heapless = "0.8"
rust-fsm = { version = "0.8", default-features = false, features = ["dsl"] }
rtic-sync = "1.4"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true